2003-06-27  Matti Aarnio  <mea@zmailer.org>

	* README.LICENSES, LICENSES/README, LICENSES/ARTISTIC,
	  LICENSES/BSD, LICENSES/GPL-2, LICENSES/LGPL-2:
	    Clarifying the license issues of ZMailer.

2003-06-25  Matti Aarnio  <mea@zmailer.org>

	* configure.in:
	    Changed version number to more RPM-friendly one, e.g. no
	    hyphen in it.

	* transports/smtp/smtp.c:
	    The  getmxrr()  calls in cname_lookup() did leak AI and NAME
	    objects.  Freeing collected (and unneeded) data there.

2003-06-24  Matti Aarnio  <mea@zmailer.org>

	* configure.in, scheduler/mailq.inc, scheduler/mailq.c,
	  scheduler/mq2.c:
	    Auto-config test to find  getloadavg()  function (BSD, Solaris 8,
	    Linux, ... a de-facto API for this data, in libc !)  and to print
	    1 and 5 minute load-averages into the scheduler's "mailq -M"
	    report.

	* transports/libta/diagnostic.c, transports/smtp/getmxrr.c:
	    Moving variable declarations around a bit, and not doing
	    initializations for NULLs/zeroes, thus letting things
	    to be placed into BSS instead of initialized read/write
	    data segment.

2003-06-22  Matti Aarnio  <mea@zmailer.org>

	* transports/libta/mimeheaders.c:
	    Last detected memory leak in header parsers.

2003-06-21  Matti Aarnio  <mea@zmailer.org>

	* include/ta.h, transports/libta/ctlopen.c,
	  transports/libta/diagnostic.c, transports/libta/mimeheaders.c:
	    More memory leak tracking related work.  Most fumbling in
	    the dark, I am afraid..

2003-06-20  Matti Aarnio  <mea@zmailer.org>

	* include/ta.h, transports/libta/ctlopen.c,
	  transports/libta/Makefile.in, transports/sm/sm.c,
	  transports/smtp/smtp.c, transports/mailbox/mailbox.c,
	  transports/hold/hold.c, transports/errormail/errormail.c,
	  transports/expirer/expirer.c, transports/reroute/reroute.c:
	    Removed  rp->routermxes  field, data format parsing, and
	    support calls for it from system.  It never materialized
	    fully, and is weaker method, than original (not materialized