@@ -1,3 +1,15 @@
+2003-07-01  Matti Aarnio  <mea@zmailer.org>
+
+	* doc/guides/smtp-policy, proto/smtpserver.conf.in,
+	  proto/db/smtp-policy.src:
+	    Typo fixes
+
+	* transports/libta/ctlopen.c, transports/libta/mimeheaders.c,
+	  transports/smtp/smtp.c:
+	    Semi-meaningless changes to assist trace debugging of
+	    memory leaks.  No idea if that finds my last 1-2 % of
+	    memory leaks that I still see...
+
 2003-06-27  Matti Aarnio  <mea@zmailer.org>
 
 	* README.LICENSES, LICENSES/README, LICENSES/ARTISTIC,
